# Esmeralda

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.94d4d94  buildwindow.cpp  buildwindow.h  buildwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  open3dmodel.cpp  open3dmodel.h
Application/: CMakeLists.txt  build.cpp  build.h  design.cpp  design.h  games.cpp  levelselect.cpp  levelselect.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  progress.cpp  progress.h  pushbutton.cpp  pushbutton.h  res.qrc
Application/blocks/: blocks.pde
Application/records/: 0.json
BlockCraft/: CMakeLists.txt  bluetooth.cpp  bluetooth.h  build.cpp  build.h  design.cpp  design.h  games.cpp  games.h  levelselect.cpp  levelselect.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menu.cpp  menu.h  open3dmodel.cpp  open3dmodel.h  progress.cpp  progress.h  pushbutton.h  res.qrc  structs.h
BlockCraft/PythonScripts/: BluetoothModule.py  QTProcessingRequests.py
BlockCraft/bats/: BlockPackageProcessing.bat  Run3DRenderer.bat
BlockCraft/levels/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
BlockCraft/records/: 0.json  4.json  5.json  8.json
PythonScripts/: BluetoothModule.py  QTProcessingRequests.py
bats/: BlockPackageProcessing.bat  Run3DRenderer.bat
